Version ClaSS-0.8.9 release (2007/02/01)
----------------------------------------

Corrected all varchar(250) fields in the infobook tables to be text
fields - needs patch-0.8.9.sql!


Version ClaSS-0.8.8 release (2007/01/22)
----------------------------------------

The loginaside text had gone missing - it needed the
loadBookOptions("logbook") to be called at the end of login.php.

Have renamed fputcsv to be file_putcsv as it conflicts with the stock
fputcsv function in PHP5.

Version ClaSS-0.8.7 release (2007/01/19)
----------------------------------------

A bugfix to the register which fixes the completion list. It was
failing to exclude students who had left a registration group. The
leavingdate clause has been added to the check_CommunityAttendance
function.

Tracked down missing D grades in the ReportBook to scoreToGrade()
function mistaking grades with score value zero for null strings.
Now use is_numeric for scoreToGrade() and scoreToPercent().

Added Element and Derivation to the new_assessments form.

Renamed xmlpreparer to be xmlechoer and now using xmlpreparer to
return xml for use by xslt_process.

Added phonenumber to the info table and fixed the length of the email
field to 240 - needs patch-0.8.7.sql.

Use phonenumber field for 'MobilePhone' in the Student xml fields.

Email, MobilePhone and FirstContact all added to the studentfields 
displaying from the select lists in the InfoBook student list.

The padding of the span element used by qtip was causing a problem for
onhover and has bee replaced by giving the span just the width and
height of its contents - it must now have a content or qtip!

The find_sids script has a problem with matching three letter
names. Best for now is to pull out results for an exact match. But its
only a work round not a solution.

Version ClaSS-0.8.6 release (2007/01/03)
----------------------------------------

A bugfix to the register to allow the display of a fresh attendance