@@ -2,6 +2,7 @@
 /**                                  student_reports.php    
  */
 
+$cancel='student_view.php';
 $action="student_reports_print.php";
 
 three_buttonmenu();
